[project]
name = "spsm"
version = "0.1.0"
description = "A simple minecraft server manager"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["minecraft", "cli", "server"]
authors = [
  {name = "Chris Morgan", email = "cnmorgan@gmail.com" }
]
maintainers = [
  {name = "Chris Morgan", email = "cnmorgan@gmail.com" } # Optional
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "click"
]

# [project.urls]
# "Homepage" = ""
# "Bug Reports" = ""
# "Funding" = ""
# "Say Thanks!" = ""
# "Source" = ""

[project.scripts]  # Optional
spsm = "cli.spsm:spsm"
spsm_server = "server.server_wrapper:main"
# [tool.setuptools]
# package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"